<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_shots"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/main" />
        <item
            android:id="@+id/nav_buckets"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/buckets" />
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/projects" />
        <item
            android:id="@+id/nav_teams"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/team" />
        <item
            android:id="@+id/nav_mine"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/mine" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
